--- a/scheduler/templates/scheduler/index.html
+++ b/scheduler/templates/scheduler/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <h3 class="schedule-header">
-            My Schedule Options
+            <span id="schedule-header">My Schedule Options</span>
             <div class="next-prev">
                 <i class="fas fa-angle-left fa-lg sched-icon" onclick="loadPreviousSchedule()"></i>
                 <i class="fas fa-angle-right fa-lg sched-icon" onclick="loadNextSchedule()"></i>
