--- a/scheduler/templates/scheduler/index.html
+++ b/scheduler/templates/scheduler/index.html
@@ -5,9 +5,197 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f0348d91da.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{% static 'external/Sortable.min.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'scheduler/scheduler.css' %}">
     <title>UVA Class Scheduler</title>
+    <style>
+        form {
+            margin-top: 1rem;
+        }
+
+        .inner-li {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+        }
+
+        .pane-container {
+            display: flex;
+            flex-direction: column;
+            width: 90%;
+            margin: 5%;
+        }
+
+        .plus-icon {
+            cursor: pointer;
+            /*filter: invert(19%) sepia(85%) saturate(2030%) hue-rotate(198deg) brightness(99%) contrast(95%);*/
+        }
+
+        .trash-icon {
+            cursor: pointer;
+            filter: invert(17%) sepia(35%) saturate(6029%) hue-rotate(347deg) brightness(91%) contrast(102%);
+        }
+
+        .center {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .flex-end {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+        }
+
+        .wish-list {
+            max-height: 400px;
+            overflow: auto;
+            -webkit-box-shadow: 2px 2px 27px -7px rgba(0,0,0,0.24);
+            box-shadow: 2px 2px 27px -7px rgba(0,0,0,0.24);
+            border-radius: 3px;
+        }
+
+        .generate-btn-container {
+            margin-top: 1.5rem;
+            margin-bottom: 7rem;
+        }
+
+        .schedule-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .next-prev {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 60px;
+        }
+
+        .sched-icon {
+            cursor: pointer;
+        }
+
+        .placeholder {
+            width: 100%;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* Calendar */
+
+        .calendar-container {
+            height: 800px;
+            width: 100%;
+            border-radius: 5px;
+            background-color: rgba(253, 231, 191, 0.38);
+            border: 1px solid rgba(124, 74, 54, 0.5);
+            margin: 1rem 0 2rem 0;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .days-header {
+            width: 100%;
+            height: 30px;
+            padding-left: 35px;
+        }
+
+        .days-header-inner {
+            width: 100%;
+            height: 100%;
+            display: flex;
+        }
+
+        .day {
+            width: 20%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .hours-and-calendar-wrapper {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            border-top: 1px solid rgba(124, 74, 54, 0.5);
+        }
+
+        .hours-sidebar {
+            width: 35px;
+            height: 100%;
+            display: grid;
+        }
+
+        .hour {
+            grid-row: 1;
+            grid-column: 1;
+            width: 35px;
+            height: 16px;
+            line-height: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            position: relative;
+        }
+
+        .calendar-main {
+            width: calc(100% - 35px);
+            height: 100%;
+            display: flex;
+        }
+
+        .calendar-day {
+            width: 20%;
+            height: 100%;
+            display: grid;
+            border-left: 1px solid rgba(124, 74, 54, 0.5);
+        }
+
+        .class-block {
+            width: calc(100% - 10px);
+            position: relative;
+            margin: 0 5px;
+            border-radius: 5px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            grid-row: 1;
+            grid-column: 1;
+        }
+
+        .color-0 {
+            background-color: rgba(98, 195, 215, 0.66);
+        }
+
+        .color-1 {
+            background-color: rgba(215, 110, 110, 0.69);
+        }
+
+        .color-2 {
+            background-color: rgba(94, 197, 94, 0.69);
+        }
+
+        .color-3 {
+            background-color: rgba(210, 210, 64, 0.65);
+        }
+
+        .color-4 {
+            background-color: rgba(163, 110, 236, 0.58);
+        }
+
+        .class-name {
+            font-weight: bold;
+        }
+
+        .class-time {
+            font-size: 14px;
+        }
+    </style>
 </head>
 
 {%  block content %}
@@ -96,4 +284,249 @@
 
 {% endblock %}
 
-<script type="text/javascript" src="{% static 'scheduler/scheduler.js' %}"></script>
+<script>
+    let courseData = [];
+    let classesSelected = [];
+
+    async function loadCourseData() {
+        return $.get('/scheduler/data', (data) => {
+            courseData = data['courses'];
+            courseData = courseData.filter((c) => c['days'] !== 'TBA');
+        });
+    }
+
+
+    function getCourseString(c) {
+        return c['Mnemonic'] + ' ' + c['Number'] + '-' + c['Section'] + ': ' + c['Title'] + ' (' + c['Units'] + ' Credits)' + ' - ' + c['Instructor(s)'];
+    }
+
+
+    function updateClassList() {
+        let classListInnerHTML = '';
+        classesSelected.forEach((c) => classListInnerHTML += constructLi(getCourseString(c)));
+        document.getElementById('class-list').innerHTML = classListInnerHTML;
+    }
+
+
+    function getClass(mnemonic, number, section) {
+        return courseData.find((c) => c['Mnemonic'] === mnemonic && c['Number'] + '' === number && c['Section'] + '' === section);
+    }
+
+
+    function addClass() {
+        document.getElementById('placeholder').style.display = 'none';
+        document.getElementById('gen-btn').disabled = false;
+        const uvaClass = getClass(document.getElementById('mnemonic-select').value,
+                                  document.getElementById('course-select').value,
+                                  document.getElementById('section-select').value);
+        if (uvaClass != null && classesSelected.find(
+                (c) => c['Mnemonic'] === uvaClass['Mnemonic'] &&
+                       c['Number'] === uvaClass['Number'] &&
+                       c['Section'] === uvaClass['Section']) == null) {
+            classesSelected.unshift(uvaClass);
+            updateClassList();
+        }
+    }
+
+
+    function removeClass(courseString) {
+        classesSelected = classesSelected.filter((c) => getCourseString(c) !== courseString);
+        if (classesSelected.length === 0) {
+            document.getElementById('placeholder').style.display = 'flex';
+            document.getElementById('gen-btn').disabled = true;
+        }
+        updateClassList();
+    }
+
+
+    function updateSelects(mnemonicChanged) {
+        const mnemonicSelected = document.getElementById('mnemonic-select').value;
+        let courseSelected = document.getElementById('course-select').value;
+
+        if (!courseSelected || mnemonicChanged) {
+            let courseNumInnerHTML = '';
+            deDupe(courseData.filter((c) => c['Mnemonic'] === mnemonicSelected), (c) => c['Number'])
+                .forEach((c) => courseNumInnerHTML += constructOption(c['Number'], c['Number'] + ' - ' + c['Title']));
+            document.getElementById('course-select').innerHTML = courseNumInnerHTML;
+        }
+
+        courseSelected = document.getElementById('course-select').value;
+        let sectionInnerHTML = '';
+        deDupe(courseData.filter((c) => c['Mnemonic'] === mnemonicSelected && c['Number'] + '' === courseSelected), (c) => c['Section'])
+            .forEach((c) => sectionInnerHTML += constructOption(c['Section'], c['Section'] + ' - ' + c['Instructor(s)']));
+        document.getElementById('section-select').innerHTML = sectionInnerHTML;
+    }
+
+
+    function constructOption(v, s) {
+        return '<option value="' + v + '">' + s + '</option>';
+    }
+
+
+    function constructLi(s) {
+        return '<li class="list-group-item"><span class="inner-li">' + s + '<i class="fas fa-trash trash-icon" onclick="removeClass(\'' + s + '\')\"></i></span></li>';
+    }
+
+
+    function deDupe(collection, key=(x)=>x) {
+        const set = new Set();
+        const result = [];
+        collection.forEach((x) => {
+            if (!set.has(key(x))) {
+                result.push(x);
+                set.add(key(x));
+            }
+        });
+        return result.sort((a,b)=>a < b ? -1 : 1);
+    }
+
+
+    window.addEventListener('load', async function() {
+        loadCourseData().then(() => {
+            let mnemonicInnerHTML = '';
+            deDupe(courseData.map((c) => c['Mnemonic']))
+                .forEach((m) => mnemonicInnerHTML += constructOption(m, m));
+            document.getElementById('mnemonic-select').innerHTML = mnemonicInnerHTML;
+
+            updateSelects();
+        });
+    });
+
+
+    // ******************* Retrieve generated schedules *********************
+
+    function onGenerateClicked() {
+        $.post('/scheduler/generate', { 'classesSelected': JSON.stringify(classesSelected) }, (result) => {
+            let allClasses = result['allClasses']
+            colorMap = {};
+            let colorI = 0;
+            allClasses.forEach((c) => {
+                colorMap[c['class_num']] = colorI;
+                if (colorI === maxColorIndex) {
+                    colorI = 0;
+                } else {
+                    colorI++;
+                }
+            });
+
+            schedules = result['schedules'];
+            currentScheduleIndex = 0;
+
+            if (schedules.length === 0) {
+                schedules.push({ 'classes': [] })
+            }
+            loadSchedule(schedules[0]['classes']);
+        });
+    }
+
+
+    // ****************************** Schedule ******************************
+
+    let schedules = [];
+    let currentScheduleIndex = 0;
+    let colorMap = {};
+    let maxColorIndex = 4;
+
+
+    function loadNextSchedule() {
+        if (schedules.length === 0) return;
+        if (currentScheduleIndex === schedules.length - 1) {
+            currentScheduleIndex = 0;
+        } else {
+            currentScheduleIndex++;
+        }
+        loadSchedule(schedules[currentScheduleIndex]['classes']);
+    }
+
+
+    function loadPreviousSchedule() {
+        if (schedules.length === 0) return;
+        if (currentScheduleIndex === 0) {
+            currentScheduleIndex = schedules.length - 1;
+        } else {
+            currentScheduleIndex--;
+        }
+        loadSchedule(schedules[currentScheduleIndex]['classes']);
+    }
+
+
+    function loadSchedule(s) {
+        const days = {
+            'MO': [],
+            'TU': [],
+            'WE': [],
+            'TH': [],
+            'FR': []
+        }
+        s.forEach((c) => {
+            buildAllClassBlocks(c).forEach((b) => {
+                let [k, blockHTML] = b;
+                days[k].push(blockHTML);
+            });
+        });
+        Object.keys(days).forEach((k) => {
+             let innerHTML = '';
+             days[k].forEach((s) => innerHTML += s);
+             document.getElementById(k).innerHTML = innerHTML;
+        });
+        if (schedules[0]['classes'].length === 0) {
+            document.getElementById('schedule-header').innerText = 'My Schedule Options (0)';
+        } else {
+            document.getElementById('schedule-header').innerText = 'My Schedule Options (' + (currentScheduleIndex + 1) + ' of ' + schedules.length + ')';
+        }
+    }
+
+
+
+    function parseTime(s) {
+        let [hrs, mins] = s.slice(0, s.length - 2).split(':');
+        if (s.substring(s.length - 2, s.length).toUpperCase() === 'AM' || hrs === '12') {
+            return (parseInt(hrs) - 8) * 60 + parseInt(mins);
+        } else {
+            return ((4 + parseInt(hrs)) * 60) + parseInt(mins);
+        }
+    }
+
+    function parseDayTime(s) {
+        if (s === 'TBA') {
+            return ['TBA', 0, 0];
+        }
+        let [dayStr, start, _, end] = s.split(' ');
+        return [dayStr.toUpperCase(), (start + ' - ' + end), parseTime(start), parseTime(end)];
+    }
+
+
+    function buildSingleClassBlock(name, timeStr, start, end, colorIndex) {
+        const top = (start + 17) + 'px';
+        const height = (end - start) + 'px';
+        return '<div class="class-block color-' + colorIndex + '" style="top: ' + top + '; height: ' + height + ';">' +
+            '<span class="class-name">' + name + '</span>' +
+            '<span class="class-time">' + timeStr + '</span>' +
+            '</div>';
+    }
+
+
+    function buildAllClassBlocks(c) {
+        let [dayStr, timeStr, start, end] = parseDayTime(c['days']);
+        const colorIndex = colorMap[c['class_num']];
+        const result = [];
+
+        if (dayStr.includes('MO')) {
+            result.push(['MO', buildSingleClassBlock(c.name, timeStr, start, end, colorIndex)]);
+        }
+        if (dayStr.includes('TU')) {
+            result.push(['TU', buildSingleClassBlock(c.name, timeStr, start, end, colorIndex)]);
+        }
+        if (dayStr.includes('WE')) {
+            result.push(['WE', buildSingleClassBlock(c.name, timeStr, start, end, colorIndex)]);
+        }
+        if (dayStr.includes('TH')) {
+            result.push(['TH', buildSingleClassBlock(c.name, timeStr, start, end, colorIndex)]);
+        }
+        if (dayStr.includes('FR')) {
+            result.push(['FR', buildSingleClassBlock(c.name, timeStr, start, end, colorIndex)]);
+        }
+        return result;
+    }
+
+</script>
